--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -1,42 +1,27 @@
+html {
+	height: 100%;
+}
+
 body {
-	font-family: "Montserrat";
+	font-family: "Gilroy", sans-serif;
+	color: $color;
+	height: 100%;
+	background-color: $main_color;
+	max-height: 100vh;
+}
+
+a {
+	color: $color;
+	text-decoration: none;
 }
 
 .wrapper {
-	//overflow-x: hidden;
 	position: relative;
+	margin: 0 auto;
+	max-height: 100%;
 }
 
 .container {
-	//width: 100%;
-	max-width: 1476px;
 	margin: 0 auto;
-	padding: 0 40px;
-}
-
-
-// Новий проект
-
-.webmalik {
-	display: flex;
-	background: #111;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-weight: bold;
-	h1 {
-		color: #fff;
-		@include adaptiv-value("font-size", 30, 14, 1);
-	}
-	img {
-		margin: 3rem auto;
-		@include adaptiv-value("width", 600, 100, 1);
-	}
-
-	width: 100vw;
-	height: 100vh;
-	background: #111;
-
-	@include adaptiv-value("font-size", "3 rem", "0.5rem", 1);
+	padding: 0 1.25rem;
 }
