--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,16 +20,16 @@ $xl:1400px;
 $font-family: "Montserrat";
 $font-size: 16px;
 $line-height: 1.5;
-$color: #000000;
+$color: #D6D4CB;
 
 // Кольори
-$main_color: #080707;
-$primary-color: #007bff;
-$secondary-color: #6c757d;
+$main_color: #1E1E1E;;
+$primary-color: #D6D4CB;
+$secondary-color: #957E5E;
 $white_color: #ffffff;
 $black_color: #000000;
 $silver_color: #151414;
-$border_silver_color: #B8B8B8;
+$border_color: #D9D9D9;
 
 // Розміщення блоків
 $container-width: 1200px;
@@ -49,7 +49,7 @@ $button-border-radius: 4px;
 
 
 // Анімація
-$transition-duration: 0.2s;
+$transition-duration: 0.3s;
 $hover-transition: all $transition-duration ease-in-out;
 
 
