Work comp build

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -155,8 +155,7 @@
 		font-size: 2rem;
 		font-family: Gilroy;
 		font-weight: 900;
-		margin-top: -6rem;
-		padding-bottom: 6rem;
+		transform: translateY(-6rem);
 	}
 
 	&__hr {
