--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,6 +44,8 @@
 		width: 100%;
 		height: 100%;
 		margin: auto;
+		opacity: 0;
+		transition: all 1.5s ease-in-out;
 	}
 
 	&__slide[data-animation="left-right"] {
@@ -57,6 +59,7 @@
 
 	&__slide--current {
 		z-index: 9;
+		opacity: 1;
 	}
 
 	&__slide-container {
@@ -77,6 +80,7 @@
 		height: calc(100vh - 7rem);
 		background: linear-gradient(0deg, #000 0%, #000 100%), lightgray 50% / cover no-repeat;
 		border-radius: 8px;
+
 		img {
 			object-fit: cover;
 			object-position: 50% 50%;
@@ -245,5 +249,85 @@
 		font-family: Gilroy;
 		font-weight: 500;
 		color: $color;
+	}
+}
+.footer {
+	position: relative;
+	cursor: pointer;
+
+	&__nav {
+		width: 100%;
+	}
+
+	&__list {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: start;
+		align-items: center;
+		width: 100%;
+		position: absolute;
+		bottom: 4.5rem;
+		height: 0rem;
+		left: 0;
+		opacity: 1;
+		z-index: 11;
+		background-color: $secondary-color;
+		padding: 0 1.25rem;
+		transition: all 0.3s linear;
+		cursor: pointer;
+	}
+
+	&__item {
+		color: $secondary-color;
+		font-size: 0.9375rem;
+		font-family: Gilroy;
+		font-weight: 600;
+		transition: all 0.3s linear;
+		opacity: 0;
+		z-index: 12;
+	}
+
+	&__loader {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: start;
+		width: 10%;
+		position: absolute;
+		bottom: 0rem;
+		height: 0;
+		opacity: 1;
+		left: 0;
+		z-index: 11;
+		background-color: $white_color;
+		//transform: translateX(-70%);
+		transition: all 0.3s linear;
+		cursor: pointer;
+
+		&-item {
+			color: #333;
+			font-size: 0.9375rem;
+			font-family: Gilroy;
+			font-weight: 600;
+		}
+	}
+
+	&:hover .footer__list,
+	&:hover .footer__loader {
+		height: 3rem;
+		opacity: 1;
+	}
+
+	&:hover .footer__item {
+		opacity: 1;
+	}
+
+	.footer__list.visible,
+	.footer__loader.visible {
+		height: 3rem;
+		opacity: 1;
+	}
+
+	.footer__item.visible {
+		opacity: 1;
 	}
 }
