--- a/src/scss/_burger-icon.scss
+++ b/src/scss/_burger-icon.scss
@@ -26,9 +26,6 @@
 
 */
 
-
-
-
 * {
 	margin: 0;
 	padding: 0;
@@ -40,8 +37,7 @@
 #nav-icon2,
 #nav-icon3,
 #nav-icon4 {
-
-	width: 50px;
+	width: 30px;
 	height: 25px;
 	position: relative;
 	//margin: 50px auto;
@@ -49,10 +45,10 @@
 	-moz-transform: rotate(0deg);
 	-o-transform: rotate(0deg);
 	transform: rotate(0deg);
-	-webkit-transition: .8s ease-in-out;
-	-moz-transition: .8s ease-in-out;
-	-o-transition: .8s ease-in-out;
-	transition: .8s ease-in-out;
+	-webkit-transition: 0.8s ease-in-out;
+	-moz-transition: 0.8s ease-in-out;
+	-o-transition: 0.8s ease-in-out;
+	transition: 0.8s ease-in-out;
 	cursor: pointer;
 }
 
@@ -61,7 +57,7 @@
 #nav-icon4 span {
 	display: block;
 	position: absolute;
-	height: 5px;
+	height: 3px;
 	width: 100%;
 	background: $primary-color;
 	border-radius: 5px;
@@ -71,10 +67,10 @@
 	-moz-transform: rotate(0deg);
 	-o-transform: rotate(0deg);
 	transform: rotate(0deg);
-	-webkit-transition: .3s ease-in-out;
-	-moz-transition: .3s ease-in-out;
-	-o-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+	-webkit-transition: 0.3s ease-in-out;
+	-moz-transition: 0.3s ease-in-out;
+	-o-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
 }
 
 #nav-icon1 span:nth-child(1) {
@@ -112,7 +108,8 @@
 
 /* Icon 2 */
 
-#nav-icon2 {}
+#nav-icon2 {
+}
 
 #nav-icon2 span {
 	display: block;
@@ -125,10 +122,10 @@
 	-moz-transform: rotate(0deg);
 	-o-transform: rotate(0deg);
 	transform: rotate(0deg);
-	-webkit-transition: .3s ease-in-out;
-	-moz-transition: .3s ease-in-out;
-	-o-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+	-webkit-transition: 0.3s ease-in-out;
+	-moz-transition: 0.3s ease-in-out;
+	-o-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
 }
 
 #nav-icon2 span:nth-child(even) {
@@ -245,7 +242,8 @@
 
 /* Icon 4 */
 
-#nav-icon4 {}
+#nav-icon4 {
+}
 
 #nav-icon4 span:nth-child(1) {
 	top: 0px;
@@ -256,7 +254,7 @@
 }
 
 #nav-icon4 span:nth-child(2) {
-	top: 14px;
+	top: 8px;
 	-webkit-transform-origin: left center;
 	-moz-transform-origin: left center;
 	-o-transform-origin: left center;
@@ -264,7 +262,7 @@
 }
 
 #nav-icon4 span:nth-child(3) {
-	top: 28px;
+	top: 16px;
 	-webkit-transform-origin: left center;
 	-moz-transform-origin: left center;
 	-o-transform-origin: left center;
@@ -277,7 +275,7 @@
 	-o-transform: rotate(45deg);
 	transform: rotate(45deg);
 	top: -3px;
-	left: 8px;
+	left: 5px;
 }
 
 #nav-icon4.open span:nth-child(2) {
@@ -290,6 +288,6 @@
 	-moz-transform: rotate(-45deg);
 	-o-transform: rotate(-45deg);
 	transform: rotate(-45deg);
-	top: 39px;
-	left: 8px;
+	top: 18px;
+	left: 5px;
 }
