--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "_mixins";
 @import "_tamplates";
 @import "_variables";
+@import "_burger-icon.scss";
 @import "_root";
 
 .wrapper {
@@ -181,7 +182,7 @@
 
 .footer {
 	padding: 0 1.25rem;
-	border-top: 1px solid $secondary-color;
+	//border-top: 1px solid $secondary-color;
 	&__info {
 		display: grid;
 		align-items: center;
@@ -237,8 +238,33 @@
 		cursor: pointer;
 	}
 
+	&__icon-sound {
+		&:before {
+			content: "";
+			display: block;
+			position: absolute;
+			left: 0;
+			right: 0;
+			pointer-events: none;
+			opacity: 0;
+			height: 2px;
+			border-top: 2px solid $color;
+			transform: rotate(-45deg);
+			width: 100%;
+			transition: opacity 0.3s ease-in-out;
+			z-index: 3;
+		}
+	}
+
+	&__icon-sound.mute {
+		&:before {
+			opacity: 1;
+		}
+	}
+
 	&__icon-border {
 		display: flex;
+		position: relative;
 		justify-content: center;
 		align-items: center;
 		width: 1.875rem;
@@ -249,6 +275,61 @@
 		font-family: Gilroy;
 		font-weight: 500;
 		color: $color;
+		z-index: 2;
+
+		a {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			border-radius: 50%;
+			background-color: $main_color;
+			width: 100%;
+			height: 100%;
+
+			z-index: 2;
+		}
+
+		&:hover {
+			&:after {
+				content: "";
+				display: block;
+				position: absolute;
+				left: 0;
+				top: 0;
+				margin: auto;
+				opacity: 1;
+				height: 100%;
+				padding: 2px;
+				margin: -2px;
+				//width: 7em; /* диаметр */
+				aspect-ratio: 1; /* ширина = высота */
+				border-radius: 50%; /* закругление углов */
+				background: $color; /* цвет */
+				animation: circle 0.5s cubic-bezier(0.25, 0.4, 0.75, 0.6) infinite; /* скорость анимации */
+				animation-iteration-count: 1;
+				transition: opacity 0.3s ease-in-out;
+				z-index: 1;
+			}
+		}
+
+		.hidden__button {
+			position: relative;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: $main_color;
+			background-image: url("../img/ph-music-notes.svg");
+			background-repeat: no-repeat;
+			background-position: center;
+			border: none;
+			outline: none;
+			cursor: pointer;
+			padding: 4px;
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			z-index: 2;
+		}
 	}
 }
 .footer {
@@ -259,26 +340,31 @@
 		width: 100%;
 	}
 
+	&__burger {
+		display: none;
+	}
+
 	&__list {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: 1fr;
+		grid-template-columns: repeat(10, 1fr);
 		justify-content: start;
 		align-items: center;
-		width: 100%;
+		width: calc(100% - 1.25rem);
 		position: absolute;
 		bottom: 4.5rem;
-		height: 0rem;
+		height: 1px;
 		left: 0;
 		opacity: 1;
 		z-index: 11;
 		background-color: $secondary-color;
-		padding: 0 1.25rem;
+		padding: 0 0rem 0 1.25rem;
 		transition: all 0.3s linear;
 		cursor: pointer;
 	}
 
 	&__item {
-		color: $secondary-color;
+		color: #333;
 		font-size: 0.9375rem;
 		font-family: Gilroy;
 		font-weight: 600;
@@ -289,12 +375,12 @@
 
 	&__loader {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: 1fr;
 		justify-content: start;
 		width: 10%;
 		position: absolute;
 		bottom: 0rem;
-		height: 0;
+		height: 1px;
 		opacity: 1;
 		left: 0;
 		z-index: 11;
@@ -331,3 +417,22 @@
 		opacity: 1;
 	}
 }
+@keyframes circle {
+	0% {
+		clip-path: polygon(50% 50%, 50% -21%, 50% -21%, 50% -21%, 50% -21%, 50% -21%);
+	}
+	25% {
+		clip-path: polygon(50% 50%, 50% -21%, 121% 50%, 121% 50%, 121% 50%, 121% 50%);
+	}
+	50% {
+		clip-path: polygon(50% 50%, 50% -21%, 121% 50%, 50% 121%, 50% 121%, 50% 121%);
+	}
+	75% {
+		clip-path: polygon(50% 50%, 50% -21%, 121% 50%, 50% 121%, -21% 50%, -21% 50%);
+	}
+	100% {
+		clip-path: polygon(50% 50%, 50% -21%, 121% 50%, 50% 121%, -21% 50%, 50% -21%);
+	}
+}
+
+@import "media.scss";
